...
//

import UIKit

class MeteorCell: UITableViewCell {
    
    var nameLabel: UILabel = {
        let label = UILabel()
        label.font = UIFont(name: "HelveticaNeue-Light", size: 17)
        label.accessibilityIdentifier = "nameLabel"
        label.textColor = UIColor.black
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
...
