...
            cell?.backgroundColor = originalColor.lighter(amount: 0.45)
            
            let cellExpandButton = MyButton(type: .custom)
            cellExpandButton.frame = CGRect(x: 0, y: 0, width: 15, height: 15)
            cellExpandButton.addTarget(self, action: #selector(handleShowDetail(sender:)), for: .touchUpInside)
            cellExpandButton.addedTouchArea = 24
            cellExpandButton.setImage(UIImage(named: "expand"), for: .normal)
            cellExpandButton.contentMode = .scaleAspectFit
            cellExpandButton.alpha = 0.5
            cellExpandButton.tag = indexPath.row
            
            cell?.selectionStyle = .none
            cell?.accessoryView = cellExpandButton as UIView
...
